Valhalla ready ByteString